--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -1,10 +1,10 @@
-@using System.Net.Mail
 @inject ISnackbar Snackbar
 @inject HttpClient http
 
 <style>
     .feedback-form{
-        width: 300px
+        width: 300px;
+        margin-top: 12px
     }
 </style>
 
@@ -12,8 +12,13 @@
 
 
     <DialogContent>
-        <MudTextField Class="feedback-form" T="string" Label="Имя" Variant="Variant.Filled" @bind-Value="Name" Immediate="true"/>
-        <MudTextField Class="feedback-form" T="string" Label="Сообщение" Variant="Variant.Filled" @bind-Value="Message" Lines="5" Immediate="true"/>
+        <div class="ma-0" style="width:300px;overflow: auto;">
+            <MudText Typo="Typo.body1" Align="Align.Left">
+                Свяжитесь со мной по электронной почте <MudLink Typo="Typo.body1" Href="@("mailto:dece1ver@sunduk.one")">dece1ver@sunduk.one</MudLink> либо используйте форму ниже.
+            </MudText>
+            <MudTextField Class="feedback-form" T="string" Label="Имя" Variant="Variant.Filled" @bind-Value="Name" Immediate="true" />
+            <MudTextField Class="feedback-form" T="string" Label="Сообщение" Variant="Variant.Filled" @bind-Value="Message" Lines="5" Immediate="true" />
+        </div>
     </DialogContent>
     <DialogActions>
         @if (Status == "Progress")
