--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -23,6 +23,9 @@
 @using Sunduk.PWA.Infrastructure
 @using Sunduk.PWA.Infrastructure.Templates
 @using Sunduk.PWA.Infrastructure.Sequences
+@using Sunduk.PWA.Infrastructure.Sequences.Base
+@using Sunduk.PWA.Infrastructure.Sequences.Turning
+@using Sunduk.PWA.Infrastructure.Sequences.Milling
 @using Sunduk.PWA.Infrastructure.Tools
 @using Sunduk.PWA.Infrastructure.Tools.Base
 @using Sunduk.PWA.Infrastructure.Tools.Turning
