--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -62,7 +62,7 @@
     {
         var parameters = new DialogParameters();
         var options = new DialogOptions() { FullScreen = false, CloseButton = true };
-        DialogService.Show<FeedbackDialog>("Обратная связь", parameters, options);
+        DialogService.Show<FeedBackDialog>("Обратная связь", parameters, options);
     }
 
     private void OpenChangelogDialog()
